cambios al diseño

--- a/src/stylesheets/Movie.css
+++ b/src/stylesheets/Movie.css
@@ -86,7 +86,11 @@
   text-align: center;
 }
 .interno-data h1{
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 400;
+  color: white;
   font-family: var(--font);
+}
+.contenedor-interno-movie:hover h1{
+  color: rgb(10, 179, 218);
 }
