--- a/src/stylesheets/Movies.css
+++ b/src/stylesheets/Movies.css
@@ -1,5 +1,6 @@
 .contenedor-movies{
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  padding: 70px;
 }
