--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -2,3 +2,13 @@
   margin: 0;
   padding: 0;
 }
+.contenedor-app{
+  background: linear-gradient(rgb(13, 44, 49), rgba(13, 33, 37, 0.87));
+}
+.interno-app-nav{
+  background: linear-gradient(rgba(16, 46, 51, 0.747), rgba(9, 28, 32, 0.726)), url('../resources/backgroundNavCopy.png');
+  background-repeat: no-repeat;
+  background-size:100%;
+  background-attachment: scroll;
+  width: 100%;
+}
