--- a/src/stylesheets/Favorites.css
+++ b/src/stylesheets/Favorites.css
@@ -11,6 +11,8 @@
   grid-template-columns: repeat(3, 1fr);
   padding: 20px;
   margin: 20px;
+  min-height: 100vh;
+  max-height: 100%;
 }
 .contenedor-interno-fav{
   margin: 10px;
