--- a/src/stylesheets/Movies.css
+++ b/src/stylesheets/Movies.css
@@ -3,4 +3,6 @@
   justify-content: center;
   grid-template-columns: repeat(3, 1fr);
   padding: 80px;
+  min-height: 100vh;
+  max-height: 100%;
 }
